--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,14 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;}
+  padding: 0;
+}
 
 body {
   font-family: 'Rajdhani', sans-serif;
   color: #ffffff;
-  background-color: black;}
-
+  background-color: black;
+}
 
 /* --- EFFECT: HIGHLIGHT --- */ 
 .current a,
@@ -18,46 +19,30 @@ body {
   filter: drop-shadow(2px 2px 2px rgba(155, 141, 13, 0.9));
   background-clip: text;
   -webkit-background-clip: text;
-  background-image: linear-gradient(to right,  rgb(11, 238, 11), rgb(145, 235, 0), rgb(17, 230, 17));
   color: transparent;
+  background-image: linear-gradient(to right,  rgb(11, 238, 11), rgb(145, 235, 0), rgb(17, 230, 17));
 }
 
 /* --- EFFECT: HOVER --- */ 
-.navbar a:hover {
-  color: #910aff;
- }
-.logotype:hover {
-  color: #05f7ff;}
+.navbar a:hover,
+.logotype:hover,
+.post-section a:hover {
+  color: #05ffee;}
 .newsletter-button:hover {
   background-color: #05f7ff;
   color: black;}
-.post-section a:hover {
-  color: cyan;}
 .contact-button:hover,
 .social-links li a i:hover {
   background: greenyellow;
   color: black;}
 
-/* - BORDER: ARTICLE & POST CARDS - */ 
-.article-section,
-.article,
-.article-image,
-.resource-image {
-      border-image:linear-gradient(
-        to bottom,
-        rgba(8, 85, 201, 0.5),
-        rgba(8, 255, 255, 0.8),
-        rgba(255, 25, 224, 0.8),
-        rgba(255, 25, 224, 0.1)
-      ) 1 2 10% 90%;
-}
-
-/* - BORDER: HEADER & FOOTER - */ 
+/* BORDERS */ 
 .header-container,
 .footer-container {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  justify-content: center;
   background-color: #000000;
   border-image: linear-gradient(
     to right,
@@ -66,63 +51,55 @@ body {
     #310167 70%
     ) 1 2 10%;}
 
-
-  /* - HEADER - */ 
+/* HEADER */ 
 .header-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   justify-content: space-between;
   align-items: center;
   height: 6em;
-  padding: 0 3em;
+  padding: 1.3em 3em;
   background-color:black;
   border-bottom: 4px solid;
- }
-
-.logotype {
-  
+}
+.logotype img {
+  margin-top: 0.2em;
 }
 
-/* - NAV-BAR - */
-
+/* NAVBAR */
 .navbar-list {
-  list-style: none;
   display: flex;
   gap: 3em;
+  list-style: none;
+}
+.navbar-link {
+  text-transform: uppercase;
+  text-decoration: unset;
+  font-size: 3rem;
+  color: #ffffff;
 }
 
-.navbar-link {
-  color: #ffffff;
-  font-size: 3rem;
-  text-transform: uppercase;
-  text-decoration: unset;}
-
-/* - LANDING TEXT - */ 
+/* LANDING TEXT */ 
 .landing-text h2 {
-  font-size: clamp(2rem, 1vw + 2.3rem, 5rem);
   font-style: italic;
+  font-size: 3.5rem;
 }
   
-/* - POSTS SECTION - */
+/* POSTS SECTION */
 .post-section-container {
   display: flex;
   justify-content: center;
   margin: 4.4em 0;
 }
 .post-section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: row;
-    gap: 4em;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  gap: 4em;
 }
-
-.post {
-  height:35em;
-  width:28em;
-  padding: 1em 1.5em;
-  background-color: black;
+.post,
+.post-image{
   border: 5px solid;
   border-image:linear-gradient(
       to bottom,
@@ -131,43 +108,40 @@ body {
       rgba(255, 25, 224, 0.8),
       rgba(255, 25, 224, 0.1)
   ) 1 2 10% 90%;
+}
+.post {
+  height:35em;
+  width:28em;
+  padding: 1em 1.5em;
+  background-color: black;
 } 
-
 .post-image {
-  padding: 0.2em;
   object-fit: cover;
   width: 100%;
   height: 15em;
-  border: 5px solid;
-  border-image:linear-gradient(
-      to bottom,
-      rgba(8, 85, 201, 0.5),
-      rgba(8, 255, 255, 0.8),
-      rgba(255, 25, 224, 0.8),
-      rgba(255, 25, 224, 0.1)
-    ) 1 2 10% 90%;
+  padding: 0.2em;
 } 
-
 .post-header {
   margin: 0.3em 0;
   font-size: clamp(0.2rem, 0.7vw + 1rem, 3rem);
 }
 .post-text {
-  line-height: 1.3em;
   height:12em; 
   font-family: Arial, Helvetica, sans-serif;
-  font-size: clamp(0.2rem, 0.5vw + 1rem, 1rem);}
+  font-size: clamp(0.2rem, 0.5vw + 1rem, 1rem);
+  line-height: 1.3em;
+}
 .post-read-more {
   float:right;
-  font-size: clamp(0.2rem, 1vw + 1rem, 1.2rem);
-  color: cyan;
 }
 .post-read-more-text {
   color:cyan;
+  font-size: clamp(0.2rem, 1vw + 1rem, 1.2rem);
 }
 
-/* - FOOTER - */
+/* FOOTER */
 .footer-container {  
+  display: flex;
   flex-direction:row-reverse;
   justify-content: space-evenly;
   padding: 1em 0;
@@ -178,14 +152,31 @@ body {
   justify-content: center;
   align-items: center;
   list-style: none;
+  gap: 0.4em;
 }
-.social-links li a i {
+.social-links a{
+  font-size: 3.2rem;
+}
+.social-list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding:1em;
+}
+.social-links-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+.social-links-item-bg{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  margin: 0.4em;
   width: 70px;
   height: 70px;
-  line-height: 4.5rem;
-  font-size: clamp(3rem, 1vw + 1rem, 5rem);
+  padding: 0.3em;
   border-radius: 50%;
   color: white;
   background-color: rgb(34, 2, 214);
@@ -195,35 +186,33 @@ body {
   -o-transition: all 0.35s ease-in-out;
 }
 
-
-/* - NEWSLETTER - */
+/* NEWSLETTER */
 .newsletter-container {
-  margin-left: 5em;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 5em;
 }
-
 .newsletter-header { 
   text-align: center;
   color: cyan;
-  font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
-  background-color: black;}
-
+  font-size: 1.7rem;
+  background-color: black;
+}
 input[type="email"] {
-  outline: unset;}
-
+  outline: unset;
+}
 .newsletter-form-input {
   text-align: center;
   width: 100%;
   font-family: "Rajdhani";
-  font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
+  font-size: 1.5rem;
   color: black;
-  outline: unset;}
-    
+  outline: unset;
+}
 .newsletter-button {
   width: 100%;
-  font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
+  font-size: 1.7rem;
   background-color: black;
   color: cyan;
   border: 8px solid;
@@ -236,20 +225,24 @@ input[type="email"] {
   ) 1 2 10% 90%;
 }
 
-
-/* - MEDIA QUERIES - */
+/* MEDIA QUERIES */
 @media screen and (min-width: 0em) and (max-width: 119em){
+/* HIDDEN */
+.post-2,
+.post-3,
+.newsletter-container,
+.landing-text{
+  display: none;
+}
 
-/* ----------- HEADER ----------- */
+/* HEADER */
 .header-container {
   display: flex;
-  justify-content: center;
   flex-wrap:nowrap;
   flex-direction: column;
+  justify-content: center;
   height: 6em;
   padding: 1em 0;
-  gap:0;
-  width: 100%;
  }
 .logotype-section{
   margin-top: 1em;
@@ -259,38 +252,34 @@ input[type="email"] {
  width: 13em;
 }
 
-/* ----------- NAV-BAR ----------- */
+/* NAVBAR */
 .navbar {
   margin: 0.5em 0;
 }
 .navbar-list {
   gap:1.5em;
 }
-
 .navbar-link {
   font-size: 1.2rem;
 }
 
-/* -------------- POSTS SECTION -------------- */
+/* POSTS SECTION */
 .post-section-container{
-  margin-top: clamp(0.2em, 1vw + 0.2em, 10em);
-  margin-bottom: clamp(0.2em, 1vw + 0.1em, 10em);
+  margin: 1.3em 0;
 }
-.post-section{
-  margin: 0 clamp(0.2em, 1vw + 1.5em, 40em);
+.post-section {
+  margin: 0 1.2em;
 }
-
 .post{
-  padding: 0 clamp(0.2em, 0.5vw + 1em, 10em);
-  height: clamp(20em, 1vw + 24.5em, 60em);
-  width:auto;
   text-align: center;
+  padding: 0 1em;
+  height: auto;
+  width:auto;
 }
-
 .post-image {
   object-fit: contain;
-  margin-top: clamp(0.7em, 1vh + 1em, 5em);
-  height: clamp(1em, 1vh + 5em, 10em);
+  margin-top: 0.5em;
+  height: 4em;
   border: 2px solid;
   border-image:linear-gradient(
     to bottom,
@@ -300,72 +289,61 @@ input[type="email"] {
     rgba(255, 25, 224, 0.1)
   ) 1 2 10% 90%;
 } 
-
 .post-header {
-  margin-bottom: clamp(0.3em, 1vw + 0.2em, 10em);
   text-align: start;
-  font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
+  margin-bottom: 0.3em;
+  font-size: 1.2rem;
 }
-
 .post-text {
   height:14.5em;
-  margin-bottom:0em;
+  margin-bottom:0.5em;
   text-align: start;
   font-family: Arial, Helvetica, sans-serif;
   font-size: clamp(0.2rem, 1vw + 0.65rem, 3rem);
 }
-
 .post-read-more {
   float:right;
+  margin: 0.5em 0;
   color: cyan;
-  margin: clamp(0.2em, 1vw + 0.2em, 10em) 0;
 }
-
 .post-read-more-text {
   color:cyan;
-  font-size: clamp(0.2rem, 1vh + 0.8rem, 5rem);
+  font-size: 1.1rem;
 }
 
-/* - FOOTER - */
-.post-2,
-.post-3,
-.newsletter-container,
-.landing-text{
-  display: none;
+/* FOOTER */
+.footer-container {
+  padding:0.4em 0;
 }
-.footer-container {  
-  margin:0;
-  padding:0;
+.social-links{
+  gap: 1em;
+  padding:0.1em;
 }
-
-.social-links li a i {
-  text-align: center;
-  width: 42px;
-  height: 42px;
-  line-height: 2.5rem;
-  font-size: clamp(0.2rem, 1vw + 1.5rem, 5rem);
+.social-links-item-bg {
+  width: 46px;
+  height: 46px;
+}
+.social-links a{
+  font-size: 2rem;
+}
+.social-list-item {
+  padding:0em;
 }
 }
-
-/* MEDIA QUERIES */
 @media screen and (min-width: 23em) and (max-width:119em){
 .post-section-container {
-  margin-top:2em;
-  margin-bottom:4.2em;
+  margin: 4.2em 0;
 }
-.post {
-  height:auto;
+.social-links {
+  gap:1.5em;
 }
 }
-
 @media screen and (min-width: 25.875em) and (max-width:119em){
-  
 .navbar-link {
   font-size: 1.5rem;
 }
 .post-section-container {
-  margin-top: 2em;
-  margin-bottom: 2.5em;
+  margin: 3.3em 0;
 }
 .post-header {
   font-size: 1.6rem;
@@ -379,59 +357,63 @@ input[type="email"] {
 .post-read-more-text{
   font-size: 1.4rem;
 }
+.social-links {
+  gap:2em;
 }
-
-/* iPhone X - MIN-HEIGHT  */
+}
 @media screen and (min-height: 50.75em) and (max-width:119em){
 .navbar-link {
   font-size: 1.5rem;
 }
-  
 .post-section-container {
-  margin-top: 3em;
-  margin-bottom: 2.8em;
-  }
+  margin: 3.1em 0;
+}
 .post-section {
   margin: 0 1em;
-  }
+}
 .post {
   padding: 0 1.5em;
-  }
+}
+.post-image {
+  height: 7em;
+}
 .post-header {
-  font-size: clamp(0.2rem, 1vh + 1rem, 5rem);
+  font-size: 1.5rem;
 }
 .post-text {
   height: auto;
   font-size: 1.2rem;
   margin-bottom:1em;
 }
-
 .post-read-more {
-margin:1em 0;
+  margin:1em 0;
+}
+.social-links {
+  gap: 1.6em;
 }
 }
-
-
 @media screen and (min-width: 37.5em) and (max-width:119em){
 .header-container{
   height: 8em;
-  }
-  .logotype img{
-    width: 20em;
-   }
-
+}
+.logotype img {
+  width: 20em;
+}
 .navbar-link {
   font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
-  }
-  /* -------------- BLOG -------------- */
-.post-section-container {
-  margin-top:1em;
-  margin-bottom: 1em;
-  }
-.post-image {
-  height: 10em;
 }
 
+/* POSTS SECTION */
+.post-section-container {
+margin: 1.5em 0;
+}
+.post-section {
+  margin:0 1.5em;
+}
+.post-image {
+  height: 8em;
+  margin-top: 1em;
+}
 .post-text {
   height:auto;
   font-size: 1.4rem;
@@ -440,17 +422,30 @@ margin:1em 0;
 .post-read-more {
   margin: 1.2em 0;
 }
+
+/* FOOTER */
+.footer-container {
+  padding: 0.8em 0;
 }
-
+.social-links {
+  gap: 3em;
+}
+.social-links-item-bg {
+  width: 60px;
+  height: 60px;
+  padding: 0.3em;
+}
+.social-links a {
+  font-size: 2.6rem;
+}
+}
 @media screen and (min-width: 48em) and (max-width:119em){
-
 .header-container {
   height: 10em;
 }
-
 .logotype img{
   width: 25em;
- }
+}
 .navbar-list {
   gap: 3em;
 }
@@ -458,24 +453,22 @@ margin:1em 0;
   font-size: clamp(0.5rem, 1vw + 2rem, 5rem);
 }
 .post-section-container {
-  margin-top: 2em;
-  margin-bottom: 3em;
+margin: 1.9em 0;
 }
 .post {
   padding: 0 clamp(0.5rem, 1vw + 3rem, 10rem);;
 }
-
+.post-image {
+  height: 12em;
+}
 .post-header {
   font-size: clamp(0.5rem, 1vw + 2rem, 4rem);
 }
-
- 
 .post-text {
   height: auto;
   line-height: 2.5rem;
   font-size: clamp(0.5rem, 1vw + 1rem, 3rem);
 }
-
 .post-read-more{
   margin-bottom: 1.5em;
 }
@@ -483,42 +476,49 @@ margin:1em 0;
   font-size: clamp(0.5rem, 1vw + 1.5rem, 5rem);
 }
 
-.social-links li a i {
-  text-align: center;
-  margin: 0.4em;
-  width: 70px;
-  height: 70px;
-  line-height: 4.5rem;
-  font-size: clamp(1rem, 1vw + 2.5rem, 5rem);
+/* FOOTER */
+.footer-container {
+  padding: 1em;
+}
+.social-links-item-bg{
+  width: 80px;
+  height: 80px;
+}
+.social-links a{
+  font-size: clamp(1rem, 1vw + 3rem, 5rem);
+}
+.social-links {
+  gap: 4em;
 }
 }
-
 @media screen and (min-width: 62em) and (max-width:119em) {
-
-  .header-container {
-    height: 13em;
-  }
-  .logotype-section {
-margin: 1em 0;
-  }
-  .logotype img{
-    width: 30em;
-   }
-/* ----------- NAV-BAR ----------- */
-.navbar {
-
-  margin: 0.2em 0;
+.header-container {
+  height: 13em;
+}
+.logotype-section {
+  margin-top: 2em;
+}
+.logotype img{
+  width: 30em;
 }
 
+/* NAVBAR */
+.navbar {
+  margin-top: 2em;
+}
+.navbar-list {
+  gap: 5em;
+}
+.navbar-link {
+  font-size: 3rem;
+}
 .post-section-container {
-  margin-top: 3em;
-  margin-bottom: 5em;
-  }
+  margin: 4.5em 0;
+}
 .post-section {
   margin: 0 5em;
-  }
+}
 .post {
-  height: auto;
   padding: 0 3em;
   margin: 2em 0em;
 } 
@@ -526,21 +526,20 @@ margin: 1em 0;
   height: 15em;
 } 
 .post-header {
-  font-size: clamp(0.5rem, 1vw + 2.5rem, 5rem);
+  font-size: 3.5rem;
 }
 .post-text{
-  height: auto;
-  line-height: 3rem;
-  font-size: clamp(0.5rem, 1vw + 1.5rem, 4rem);
   margin-bottom: 0.5em;
+  line-height: 3rem;
+  font-size: 2.1rem;
 }
 .post-read-more {
   margin: 1.5em 0;
 }
 .post-read-more-text{
-  font-size: clamp(0.5rem, 1vw + 2rem, 5rem);
+  font-size: 2.6rem;
 }
 .social-links {
-  gap: 3em;
+  gap: 6.5em;
 }
 }
