--- a/assets/css/style_article.css
+++ b/assets/css/style_article.css
@@ -1,5 +1,16 @@
-
-
+/* BORDERS */ 
+.article-section,
+.article-image,
+.article {
+  border: 4px solid;
+      border-image:linear-gradient(
+        to bottom,
+        rgba(8, 85, 201, 0.5),
+        rgba(8, 255, 255, 0.8),
+        rgba(255, 25, 224, 0.8),
+        rgba(255, 25, 224, 0.1)
+      ) 1 2 10% 90%;
+}
 .article-section-container {
   display:flex;
   flex-wrap: wrap;
@@ -8,16 +19,12 @@
   margin-top: 1em;
   margin-bottom: 1em;
 }
-
 .article-section {
   display: flex;
   flex-direction: row-reverse;
   background-color: black;
   width: 80em;
-  border: 4px solid;
 }
-
-
 .article-image {
   object-fit: contain;
   width: 20em;
@@ -28,9 +35,9 @@
   padding: 1em 3em;
 }
 .article-header {
-    font-family: "Rajdhani";
-    font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
-    margin: 0.5em 0;
+  font-family: "Rajdhani";
+  font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
+  margin: 0.5em 0;
 }
 .article-text {
 font-family: Arial, Helvetica, sans-serif;
@@ -41,7 +48,6 @@ line-height: 1.3;
 }
 
 /* - MEDIA QUERIES - */
-
 @media screen and (min-width: 0em) and (max-width: 119em){
 .article-section-container {
   display: flex;
@@ -51,28 +57,25 @@ line-height: 1.3;
   margin-top: clamp(0.2em, 1vw + 2em, 40em);
   margin-bottom:clamp(0.2em, 1vw + 2em, 40em);
 }
-
 .article-section{
+  padding:0;
   margin: 0 clamp(0.2em, 1vw + 1em, 40em);
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-
 .article {
   padding: 0 clamp(0.2em, 1vw + 1em, 30em);
   width: auto;
   text-align: center;
-  border: 2px solid;
-  
 }
-
+.article-content {
+  padding:0;
+}
 .article-image {
   object-fit: contain;
   margin-top: clamp(0.5em, 1vh + 0.5em, 10em);
   width: 10em;
-  border: 2px solid;
-  
 }
 .article-text, 
 .article-list, 
@@ -80,59 +83,35 @@ line-height: 1.3;
   text-align: start;
 }
 }
-  
-  
-@media screen and (min-width: 0em) and (max-width:119em){
-
+@media screen and (min-width: 48em) and (max-width:119em){
+.article-section-container {
+  margin-bottom: 1.6em;
+}
+.article-image {
+  width: 12em;
+}
+.article-header {
+  font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
+}
+}
+@media screen and (min-width: 62em) and (max-width:119em) {
+.article-section-container {
+  margin-top: 10em;
+  margin-bottom: 17em;
+}
 .article-section {
-  padding:0;
+  margin: 0 5em;
 }
-.article-content {
-  padding:0;
+.article {
+  padding: 0 3em;
+}
+.article-image {
+  width: 20em;
+}
+.article-header {
+  font-size: clamp(0.5rem, 1vw + 2rem, 5rem);
+}
+.article-text {
+  font-size: clamp(0.5rem, 1vw + 1rem, 5rem);
 }
 }
-
-
-  
-  @media screen and (min-width: 48em) and (max-width:119em){
-    
-    .article-section-container {
-      margin-bottom: 1.6em;
-      
-    }
-
-    .article-image {
-      width: 12em;
-      border: 4px solid;
-    }
-    .article-header {
-      font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
-    }
-  
-  }
-  
-  
-  @media screen and (min-width: 62em) and (max-width:119em) {
-   
-
-    .article-section-container {
-      margin-top: 10em;
-      margin-bottom: 17em;
-      }
-  
-      .article-section {
-        margin: 0 5em;
-      }
-      .article {
-        padding: 0 3em;
-      }
-      .article-image {
-        width: 20em;
-      }
-      .article-header {
-        font-size: clamp(0.5rem, 1vw + 2rem, 5rem);
-      }
-      .article-text {
-        font-size: clamp(0.5rem, 1vw + 1rem, 5rem);
-      }
-  }
