--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -67,10 +67,9 @@
 }
 
 /* - MEDIA QUERIES - */
-@media screen and (min-width: 0em) and (max-width:119.938em) {
+@media screen and (min-width: 0em) and (max-width:119em) {
 .contact-section-container{
-    margin-top: 4em;
-    margin-bottom: 5.3em;
+   margin: 4.7em 0;
 }
 .contact-section {
     width: 17em;
@@ -87,35 +86,32 @@
 }
 .contact-message-input {
     margin: 0.3em 0;
-}}
-
-@media screen and (min-width: 23em) and (max-width:119.938em){
+}
+}
+@media screen and (min-width: 23em) and (max-width:119em){
 .contact-section-container{
-    margin-top: 7em;
-    margin-bottom: 8em;
-}}
-@media screen and (min-width: 25.875em) and (max-width:119.938em) {
+    margin: 7.6em 0;
+}
+}
+@media screen and (min-width: 25.875em) and (max-width:119em) {
 .contact-section-container{
-    margin-top: 10em;
-    margin-bottom: 9.1em;
-}}
-
-@media screen and (min-height: 50.75em) and (max-width:119.938em){
+    margin: 9.7em 0;
+}
+}
+@media screen and (min-height: 50.75em) and (max-width:119em){
 .contact-section-container{
-    margin-top: 5em;
-    margin-bottom: 6.7em;
+    margin: 5.9em 0;
 }
 .contact-message-input {
     height: 15em;
 }
 .contact-message-input::placeholder {
     font-size: clamp(0.2rem, 1vw + 1rem, 2rem);
-}}
-
-@media screen and (min-width: 37.5em) and (max-width:119.938em){
+}
+}
+@media screen and (min-width: 37.5em) and (max-width:119em){
 .contact-section-container{
-    margin-top: 5em;
-    margin-bottom: 7.8em;
+    margin: 5.7em 0;
 }
 .contact-section {
     width:25em;
@@ -125,21 +121,19 @@
 }
 .contact-message-input::placeholder {
     font-size: clamp(0.2rem, 1vw + 1rem, 2rem);
-}}
-
-@media screen and (min-width: 48em) and (max-width:119.938em) {
+}
+}
+@media screen and (min-width: 48em) and (max-width:119em) {
 .contact-section-container{
-    margin-top: 10em;
-    margin-bottom: 10.7em;
+    margin: 10.2em 0;
 }
 .contact-section {
     width:30em;
-}}
-
-@media screen and (min-width: 62em) and (max-width:119.938em) {
+}
+}
+@media screen and (min-width: 62em) and (max-width:119em) {
 .contact-section-container{
-    margin-top: 10em;
-    margin-bottom: 17em;
+    margin: 13.5em 0;
 }
 .contact-section {
     width:40em;
@@ -149,4 +143,5 @@
 }
 .contact-button {
     font-size: 2.5rem;
-}}
+}
+}
