--- a/assets/css/style_error.css
+++ b/assets/css/style_error.css
@@ -1,4 +1,3 @@
-
 .error-message-section {
     display: flex;
     flex-direction: column;
@@ -23,14 +22,13 @@
     bottom:0;
     width: 100%;
 }
-
-
-@media screen and (min-width: 0em) and (max-width:119.938em) {
+/* MEDIA QUERIES */
+@media screen and (min-width: 0em) and (max-width:119em) {
 .error-message-section {
     margin: 2em 2em;
 }
-
 .error-message-header,
 .error-message-text{
     font-size: 1.5rem;
-}}
+}
+}
