--- a/assets/css/style_resources.css
+++ b/assets/css/style_resources.css
@@ -11,26 +11,8 @@
   flex-direction: row;
   gap: 5em;
 }
-.resource{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 2em;
-  background-color: black;
-  border: 4px solid;
-  border-image: linear-gradient(
-    to bottom,
-    rgba(8, 85, 201, 0.5),
-    rgba(8, 255, 255, 0.8),
-    rgba(255, 25, 224, 0.8),
-    rgba(255, 25, 224, 0.1)
-  ) 1 2 10% 90%;}
-
+.resource,
 .resource-image {
-  object-fit: cover;
-  width: 25em;
-  aspect-ratio: 1.7;
-  margin-bottom: 1em;
   border: 4px solid;
   border-image: linear-gradient(
     to bottom,
@@ -40,7 +22,19 @@
     rgba(255, 25, 224, 0.1)
   ) 1 2 10% 90%;
 }
-
+.resource{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2em;
+  background-color: black;
+}
+.resource-image {
+  object-fit: cover;
+  width: 25em;
+  aspect-ratio: 1.7;
+  margin-bottom: 1em;
+}
 .resource-header {
   font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
   text-align: center;
@@ -50,7 +44,6 @@
   font-size: clamp(0.2rem, 1vw + 0.5rem, 2rem);
   text-align: center;
 }
-
 .resource-link {
   text-decoration: unset;
   color: white;
@@ -62,8 +55,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: clamp(0.2em, 1vw + 2em, 40em);
-  margin-bottom: clamp(0.2em, 1vw + 2.1em, 40em);
+  margin: 2.3em 0;
 }
 .resource-section{
   display: flex;
@@ -91,53 +83,48 @@
 .resource-text
 {
   font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
-}}
-
+}
+}
 @media screen and (min-width: 23em) and (max-width:119em){
 .resource-section-container{
-  margin-top: clamp(0.2em, 1vw + 4em, 40em);
-  margin-bottom: clamp(0.2em, 1vw + 5.5em, 40em);
-}}
-
+  margin: 5.1em 0;
+}
+}
 @media screen and (min-width: 25.875em)and (max-width:119em) {
 .resource-section-container{
-  margin-top: clamp(0.2em, 1vw + 5em, 40em);
-  margin-bottom: clamp(0.2em, 1vw + 7em, 40em);
+  margin: 6.3em 0;
 }
 .resource-section {
   gap:3em;
-}}
-
+}
+}
 @media screen and (min-height: 50.75em) and (max-width:119em){
 .resource-section-container{
-  margin-top: 6em;
-  margin-bottom: 6.2em;
+  margin: 6.2em 0;
 }
 .resource-section {
   gap:5.5em;
-}}
-
+}
+}
 @media screen and (min-width: 37.5em) and (max-width:119em){
 .resource-section-container {
-  margin-bottom: 7.5em;
-}}
-
+  margin: 5.8em 0;
+}
+}
 @media screen and (min-width: 48em) and (max-width:119em){
 .resource-section-container{
-  margin-top: clamp(0.2em, 1vw + 6em, 40em);
-  margin-bottom: clamp(0.2em, 1vw + 7em, 40em);
+  margin: 6.8em 0;
 }
 .resource-section{
   gap: 5.2em;
 }
 .resource {
   padding: 1em;
-}}
-
+}
+}
 @media screen and (min-width:62em) and (max-width:119em){
 .resource-section-container{
-  margin-top: 7em;
-  margin-bottom: 8em;
+ margin: 7.5em 0;
 }
 .resource-section{
   gap: 5.4em;
@@ -152,4 +139,5 @@
 .resource-text
 {
   font-size: clamp(0.2rem, 1vw + 2rem, 4rem);
-}}
+}
+}
